--- a/Wikia.css
+++ b/Wikia.css
@@ -1,4 +1,32 @@
-/* Para Interface de Criação de Página (teste) */
+/* Para Interface de Criação de Página */
+.infoboxIcon {
+    background-image: url(https://vignette.wikia.nocookie.net/pt.starwars/images/3/3b/ICP_icons.png);
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
+td[data-tipo="personagem"] .infoboxIcon {
+    background-position: 0px 100px;
+}
+td[data-tipo="planeta"] .infoboxIcon {
+    background-position: -100px 100px;
+}
+td[data-tipo="droide"] .infoboxIcon {
+    background-position: 0 0;
+}
+td[data-tipo="espaçonave"] .infoboxIcon {
+    background-position: 200px 0px;
+}
+td[data-tipo="evento"] .infoboxIcon {
+    background-position: 100px 0px;
+}
+td[data-tipo="tecnologia"] .infoboxIcon {
+    background-position: 100px 100px;
+}
+td[data-tipo="outro"] {
+    font-size: 15px;
+    padding: 15px;
+}
 .pi-data-value textarea { width: 100%; }
 #NovaPaginaTipoDeArtigo td:hover { background-color: lightgray; }
 #CuratedContentToolModal p {
