--- a/Wikia.css
+++ b/Wikia.css
@@ -61,3 +61,4 @@ td[data-tipo="outro"] {
 }
 #CuratedContentToolModal section { overflow-y: auto; }
 #CuratedContentToolModal { max-height: 80%; }
+.ICPdisclaimer { font-size: 12px; }
