Add step progress bar

--- a/Wikia.css
+++ b/Wikia.css
@@ -62,3 +62,61 @@ div[data-tipo="outro"] {
 #CuratedContentToolModal section { overflow-y: auto; }
 #CuratedContentToolModal { max-height: 80%; }
 .ICPdisclaimer { font-size: 12px; }
+
+#CuratedContentToolModal > nav li {
+    display: inline-block;
+    width: 33%;
+    line-height: 30px;
+    position: relative;
+}
+
+#CuratedContentToolModal > nav li:before {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: royalblue;
+    display: inline-block;
+    margin-right: 30px;
+    position: absolute;
+    top: 14px;
+    left: -50%;
+    z-index: 0;
+}
+
+#CuratedContentToolModal > nav li > div {
+    background: lightblue;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    color: royalblue;
+    margin: 0 auto;
+    z-index: 5;
+    position: relative;
+}
+
+#CuratedContentToolModal > nav li:first-child:before {
+    content: none;
+}
+
+#CuratedContentToolModal > nav li.disabled > div {
+    background: #CCC;
+    color: #666;
+}
+
+#CuratedContentToolModal > nav li.disabled:before {
+    background: #CCC;
+}
+
+#CuratedContentToolModal > nav li.past > div {
+    background: lightblue;
+    cursor: pointer;
+}
+
+#CuratedContentToolModal > nav li.past:before {
+    background: lightblue;
+}
+
+#CuratedContentToolModal > nav li.active > div {
+    background: royalblue;
+    color: #fff;
+}
